--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Tomify</title>
   </head>
   <body>
-    <script src="lib/tomify.js"></script>
+    <script src="tomify.js"></script>
     <script>
       console.log(Tomify);
     </script>
