--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Tomify</title>
   </head>
   <body>
+    <div id="tomify"></div>
     <script src="tomify.js"></script>
     <script>
-      console.log(Tomify);
+      Tomify.init("#tomify");
     </script>
   </body>
 </html>
